libs/fleet/sdk-bindings/swift/CyclopsSdkFFI.h

uint16_t uniffi_cyclops_sdk_checksum_method_httpclient_execute(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopstokenproviderconfigurationbuilder_base_url(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopstokenproviderconfigurationbuilder_build(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopstokenproviderconfigurationbuilder_claim_poll_interval_ms(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopstokenproviderconfigurationbuilder_claim_poll_limit(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopstokenproviderconfigurationbuilder_pool_poll_interval_ms(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopstokenproviderconfigurationbuilder_pool_poll_limit(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_httprequestbuilder_body(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_httprequestbuilder_build(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_httprequestbuilder_headers(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_httprequestbuilder_max_response_bytes(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_httprequestbuilder_method(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_httprequestbuilder_timeout_secs(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_httprequestbuilder_url(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_templatebuilder_api_version(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_templatebuilder_build(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_templatebuilder_kind(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_templatebuilder_metadata(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_templatebuilder_spec(void

);
uint16_t uniffi_cyclops_sdk_checksum_constructor_httprequestbuilder_new(void

);
uint16_t uniffi_cyclops_sdk_checksum_constructor_templatebuilder_new(void

);